<resources>

    <string name="app_name">VPlant</string>
    <string name="Phone">Phone</string>
    <string name="OTP">OTP</string>
    <string name="OTP_Sent">OTP Sent</string>
    <string name="Resend_OTP">Resend OTP</string>
    <string name="Counter_Hint">Counter Hint</string>
    <string name="Get_OTP">Get OTP</string>
    <string name="Verify_Number">Verify Number</string>
    <string name="Welcome">Welcome!!</string>
    <string name="Registration_Text">Please provide the necessary information below:</string>
    <string name="First_Name">First Name</string>
    <string name="Last_Name">Last Name</string>
    <string name="Address">Address</string>
    <string name="Submit">Submit</string>
    <string name="Business_Name">Business Name</string>
    <string name="Get_Plants">Get Plants</string>
    <string name="Aloevera">Aloevera</string>
    <string name="Artichoke">Artichoke</string>
    <string name="Bok_Choy">Bok Choy</string>
    <string name="Boston_Fern">Boston Fern</string>
    <string name="Cauliflower">Cauliflower</string>
    <string name="Chamomile">Chamomile</string>
    <string name="Chives">Chives</string>
    <string name="English_Ivy">English Ivy</string>
    <string name="Garlic">Garlic</string>
    <string name="Lettuce">Lettuce</string>
    <string name="Onions">Onions</string>
    <string name="Sunflower">Sunflower</string>
    <string name="Aloevera_Field">Aloevera:</string>
    <string name="Artichoke_Field">Artichoke:</string>
    <string name="Bok_Choy_Field">Bok Choy:</string>
    <string name="Boston_Fern_Field">Boston Fern:</string>
    <string name="Cauliflower_Field">Cauliflower:</string>
    <string name="Chamomile_Field">Chamomile:</string>
    <string name="Chives_Field">Chives:</string>
    <string name="English_Ivy_Field">English Ivy:</string>
    <string name="Garlic_Field">Garlic:</string>
    <string name="Lettuce_Field">Lettuce:</string>
    <string name="Onions_Field">Onions:</string>
    <string name="Sunflower_Field">Sunflower:</string>
    <string name="Update">Update</string>
    <string name="Refresh">Refresh</string>


    <string name="open">Open</string>
    <string name="close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>