<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registerActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/infoLinear"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/Welcome"
            android:textColor="@color/purple_700"
            android:textSize="50sp"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:textSize="30sp"
            android:id="@+id/registrationText"
            android:text="@string/Registration_Text"
            android:textColor="@color/design_default_color_error" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="75dp">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            android:paddingBottom="12.5dp"
            android:paddingHorizontal="10dp"
            android:layout_marginTop="10dp">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/First_Name"
            android:id="@+id/firstName"
            android:inputType="textPersonName"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="12.5dp"
            android:paddingBottom="12.5dp"
            android:paddingHorizontal="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Last_Name"
                android:id="@+id/lastName"
                android:inputType="textPersonName"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="12.5dp"
            android:paddingBottom="12.5dp"
            android:paddingHorizontal="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Address"
                android:id="@+id/address"
                android:inputType="textPostalAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12.5dp"
        android:paddingBottom="12.5dp"
        android:paddingHorizontal="10dp">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Business_Name"
            android:id="@+id/businessName"
            android:inputType="textPostalAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Submit"
            android:backgroundTint="@color/green"
            android:id="@+id/submitBtn"
            android:layout_marginTop="20dp"
            />

    </LinearLayout>

    </ScrollView>
</RelativeLayout>