<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        android:fitsSystemWindows="true"
        android:theme="@style/Theme.MyApplication.AppBarOverlay"
        />


    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_add_sign"
            android:id="@+id/clicked"
            android:text="@string/Get_Plants"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="50dp"
            android:layout_marginEnd="30dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/green"
                android:id="@+id/toolbar"
                app:popupTheme="@style/Theme.MyApplication.popUOverlay"
                app:layout_scrollFlags="scroll|enterAlways"
                />
            <TextView
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/mainActivityHeading"

                />
            <ScrollView
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/inventoryScroll"

               >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="10"
                        android:layout_marginHorizontal="25dp"
                        android:layout_marginTop="25dp"
                        android:layout_marginBottom="12.5dp">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="6"
                            android:text="@string/Aloevera_Field"
                            android:textSize="25sp"/>
                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:id="@+id/aloveraCount"/>



                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="10"
                        android:layout_marginHorizontal="25dp"
                        android:layout_marginTop="12.5dp"
                        android:layout_marginBottom="12.5dp">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="6"
                            android:text="@string/Artichoke_Field"
                            android:textSize="25sp"/>
                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:id="@+id/artichokeCount"/>



                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="10"
                        android:layout_marginHorizontal="25dp"
                        android:layout_marginTop="12.5dp"
                        android:layout_marginBottom="12.5dp">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="6"
                            android:text="@string/Bok_Choy_Field"
                            android:textSize="25sp"/>
                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:id="@+id/bokChoyCount"/>



                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="10"
                        android:layout_marginHorizontal="25dp"
                        android:layout_marginTop="12.5dp"
                        android:layout_marginBottom="12.5dp">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="6"
                            android:text="@string/Boston_Fern_Field"
                            android:textSize="25sp"/>
                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:id="@+id/bostonFernCount"/>



                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="10"
                        android:layout_marginHorizontal="25dp"
                        android:layout_marginTop="12.5dp"
                        android:layout_marginBottom="12.5dp">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="6"
                            android:text="@string/Cauliflower_Field"
                            android:textSize="25sp"/>
                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:id="@+id/cauliflowerCount"/>



                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="10"
                        android:layout_marginHorizontal="25dp"
                        android:layout_marginTop="12.5dp"
                        android:layout_marginBottom="12.5dp">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="6"
                            android:text="@string/Chamomile_Field"
                            android:textSize="25sp"/>
                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:id="@+id/chamomileCount"/>



                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="10"
                        android:layout_marginHorizontal="25dp"
                        android:layout_marginTop="12.5dp"
                        android:layout_marginBottom="12.5dp">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="6"
                            android:text="@string/Chives_Field"
                            android:textSize="25sp"/>
                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:id="@+id/chivesCount"/>



                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="10"
                        android:layout_marginHorizontal="25dp"
                        android:layout_marginTop="12.5dp"
                        android:layout_marginBottom="12.5dp">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="6"
                            android:text="@string/English_Ivy_Field"
                            android:textSize="25sp"/>
                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:id="@+id/englishIvyCount"/>



                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="10"
                        android:layout_marginHorizontal="25dp"
                        android:layout_marginTop="12.5dp"
                        android:layout_marginBottom="12.5dp">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="6"
                            android:text="@string/Garlic_Field"
                            android:textSize="25sp"/>
                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:id="@+id/garlicCount"/>



                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="10"
                        android:layout_marginHorizontal="25dp"
                        android:layout_marginTop="12.5dp"
                        android:layout_marginBottom="12.5dp">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="6"
                            android:text="@string/Lettuce_Field"
                            android:textSize="25sp"/>
                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:id="@+id/lettuceCount"/>



                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="10"
                        android:layout_marginHorizontal="25dp"
                        android:layout_marginTop="12.5dp"
                        android:layout_marginBottom="12.5dp">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="6"
                            android:text="@string/Onions_Field"
                            android:textSize="25sp"/>
                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:id="@+id/onionCount"/>



                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="10"
                        android:layout_marginHorizontal="25dp"
                        android:layout_marginTop="12.5dp"
                        android:layout_marginBottom="25dp">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="6"
                            android:text="@string/Sunflower_Field"
                            android:textSize="25sp"/>
                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:id="@+id/sunflowerCount"/>



                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="10"
                        android:layout_marginBottom="50dp">

                        <com.google.android.material.button.MaterialButton
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="5"
                            android:id="@+id/updateSellerInventoryBtn"
                            android:text="@string/Update"
                            android:layout_marginHorizontal="10dp"/>
                        <com.google.android.material.button.MaterialButton
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="5"
                            android:id="@+id/refreshSellerInventoryBtn"
                            android:text="@string/Refresh"
                            android:layout_marginHorizontal="10dp"/>

                    </LinearLayout>


                </LinearLayout>


            </ScrollView>


        </LinearLayout>

    </FrameLayout>







</androidx.coordinatorlayout.widget.CoordinatorLayout>